# artery-stenosis

./: .gitattributes  .gitignore  .slicerrc.py  README.md  note.md  parse_markup.py  setup.zsh
build-utils/: cmake_slicer.sh
ext/ArteryStenosisCal/: CMakeLists.txt  CMakePresets.json  build_command.sh
ext/ArteryStenosisCal/BVAirSegmentation/: BVAirSegmentation.cxx  BVAirSegmentation.xml  CMakeLists.txt
ext/ArteryStenosisCal/BVCreateGuideLine/: BVCreateGuideLine.cxx  BVCreateGuideLine.xml  CMakeLists.txt
ext/ArteryStenosisCal/BVPreprocessVolume/: BVPreprocessVolume.py  CMakeLists.txt
ext/ArteryStenosisCal/BVPreprocessVolume/BVPreprocessVolumeLib/: BVPVConstants.py
ext/ArteryStenosisCal/BVPreprocessVolume/Resources/UI/: BVPreprocessVolume.ui
ext/ArteryStenosisCal/BVStenosisMeasurement/: BVStenosisMeasurement.py  CMakeLists.txt
ext/ArteryStenosisCal/BVStenosisMeasurement/BVStenosisMeasurementLib/: BVConstants.py  Controllers.py  MRMLUtils.py  PreprocessVolume.py  Timer.py
ext/ArteryStenosisCal/BVStenosisMeasurement/Resources/UI/: BVStenosisMeasurement.ui
ext/ArteryStenosisCal/CreateGuideLinePython/: CMakeLists.txt  CreateGuideLinePython.py  CreateGuideLinePython.xml
ext/ArteryStenosisCal/DefaultPythonMod/: CMakeLists.txt  DefaultPythonMod.py
ext/ArteryStenosisCal/DefaultPythonMod/Resources/UI/: DefaultPythonMod.ui
ext/ArteryStenosisCal/MarkupsCliPoc/: CMakeLists.txt  MarkupsCliPoc.cxx  MarkupsCliPoc.xml
ext/ArteryStenosisCal/StenosisCal/: CMakeLists.txt  StenosisCal.py
ext/ArteryStenosisCal/StenosisCal/Resources/UI/: StenosisCal.ui
ext/ArteryStenosisCal/StenosisCal/StenosisCalLib/: MainLogic.py  MyFunc.py
ext/ArteryStenosisCal/TestCliMod/: CMakeLists.txt  TestCliMod.cxx  TestCliMod.xml  build-command.sh
jupyter-notebook/: 04_Segmentation.ipynb  PDA.ipynb  module_names.txt  scratch.ipynb  scratch2.ipynb
snippets/: create_guideline_test.py  do_crop.py  volume_snippets.py
